Add installable version

--- a/PdfCombiner/PdfCombiner.csproj
+++ b/PdfCombiner/PdfCombiner.csproj
@@ -25,4 +25,8 @@
     <Resource Include="info.ico" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="InstallableFiles\" />
+  </ItemGroup>
+
 </Project>
